--- a/my-app/src/components/About.css
+++ b/my-app/src/components/About.css
@@ -1,14 +1,21 @@
 ul:first-of-type {
-  border-top: 1px solid;
+  border-top: 3px solid;
 }
 
 ul {
-  border-bottom: 1px solid;
+  border-bottom: 3px solid;
   padding: 10px;
 }
 
 .About {
     text-align: left;
+    background-color: #fffdd0
+}
+
+h1 {
+  color: red;
+  font-weight: bold;
+
 }
 
 .prof_pic {
