Phase 1: Added buttons with icons for the sports pages.

--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -16,7 +16,11 @@
   font-size: calc(10px + 2vmin);
   color: white;
 }
-
+.btn-row {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
 .App-link {
   color: cyan;
 }
