Added github issues and made some UI changes

--- a/my-app/src/components/About.css
+++ b/my-app/src/components/About.css
@@ -20,6 +20,10 @@ h1 {
 
 .prof_pic {
   width: 200px;
-  display: inherit; 
+  display: inherit;
+  padding: 10px;
+}
+
+.AboutInformation {
   padding: 10px;
 }
