--- a/my-app/src/components/Pages.css
+++ b/my-app/src/components/Pages.css
@@ -3,7 +3,13 @@
     height: 100vh; 
 }
 
-.LoginButtons{
+.LoginButton{
     position: absolute;
     left: 620px;
 }
+
+.CreateAccount{
+    position: absolute;
+    left: 700px;
+}
+
