Phase 2: Pages modified to accomodate all games to be displayed

--- a/my-app/src/components/Logos.css
+++ b/my-app/src/components/Logos.css
@@ -1,16 +1,13 @@
 .Logos {
   
         height: 20vmin;
-        margin-left: auto;
-        margin-right: auto;
+        text-align: left;
         
   }
   
   .App-logo-pages {
-      display: block;
+    text-align: center;  
       margin-left: auto;
       margin-right: auto;
      height: 10vmin; 
   }
-  
-  
