--- a/my-app/src/pages/Pages.css
+++ b/my-app/src/pages/Pages.css
@@ -1,6 +1,6 @@
 .Pages {
     background-color: #282c34;
-    min-height: 100vh;
+    min-height: flex;
     display: flex;
     flex-direction: column;
     align-items: center;
