Phase 2: Changed styling for better viewing of all games

--- a/my-app/src/components/ImgButton.css
+++ b/my-app/src/components/ImgButton.css
@@ -18,3 +18,15 @@
     width: 200px;
     padding: 10px;
 }
+
+.left-row{
+    display:inline-block;
+    background-color: #343a40;
+    color:#ffffff;
+    border-radius: 10px;
+    font-family:Arial;
+    font-size:40px;
+    font-weight:bold;
+    padding:13px 32px;
+    text-decoration:none;
+}
