--- a/my-app/src/components/Logos.css
+++ b/my-app/src/components/Logos.css
@@ -5,7 +5,7 @@
         width: 100px;
         height: 200px;
         position: absolute;
-        left:0;
+        left:5mm;
         top:1;
         
   }
@@ -16,7 +16,7 @@
     width: 150px;
     height: 200px;
     position: absolute;
-    left:0;
+    left:5mm;
     top:1;
     
 }
@@ -36,7 +36,7 @@
     width: 200px;
     height: 125px;
     position: absolute;
-    left:0;
+    left:5mm;
     top:1;
     
 }
