Phase 2: Added dynamic routing. Added dynamic rendering of games on NFL page. TODO: Make NflPages dynamic

--- a/my-app/src/pages/Pages.css
+++ b/my-app/src/pages/Pages.css
@@ -1,6 +1,18 @@
 .Pages {
     background-color: #282c34;
-    min-height: flex;
+    min-height: 100vh;
+    overflow: hidden;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    font-size: calc(10px + 2vmin);
+    color: white;
+}
+.Pages-Nfl {
+    background-color: #282c34;
+    min-height: 420vh;
+    overflow: hidden;
     display: flex;
     flex-direction: column;
     align-items: center;
