--- a/my-app/src/components/Logos.css
+++ b/my-app/src/components/Logos.css
@@ -1,42 +1,57 @@
+
+
+.login {
+  display: flex;
+  justify-content: center;
+  width: 500px;
+}
+
+.LoginButton, .CreateAccount {
+  position: relative !important;
+  margin: 5px;
+  left: 0 !important;
+  right: 0 !important;
+}
+
 .NBALogos {
-    
-  
+
+
         height: 2vmin;
         width: 100px;
         height: 200px;
         position: absolute;
         left:5mm;
         top:1;
-        
+
   }
   .NFLLogos {
-    
-  
+
+
     height: 2vmin;
     width: 150px;
     height: 200px;
     position: absolute;
     left:5mm;
     top:15mm;
-    
+
 }
 
-  
+
   .App-logo-pages {
-    text-align: center;  
+    text-align: center;
       margin-left: auto;
       margin-right: auto;
-     height: 10vmin; 
+     height: 10vmin;
   }
-  
+
 .MLBLogos {
-    
-  
+
+
     height: 2vmin;
     width: 200px;
     height: 125px;
     position: absolute;
     left:5mm;
     top:1;
-    
+
 }
