Phase 2: Added dictionary for NFL teams. Adjusted Page and Logo css. Edited NFL Teams.json to update team locations.

--- a/my-app/src/components/Logos.css
+++ b/my-app/src/components/Logos.css
@@ -23,10 +23,11 @@
 
   
   .App-logo-pages {
-    text-align: center;  
+      text-align: center;
       margin-left: auto;
       margin-right: auto;
-     height: 10vmin; 
+      margin-top: 20px;
+      height: 10vmin;
   }
   
 .MLBLogos {
