Phase 2: Fixed time and date on GameBar. Fixed JAC -> JAX.

--- a/my-app/src/components/Logos.css
+++ b/my-app/src/components/Logos.css
@@ -6,7 +6,7 @@
         height: 200px;
         position: absolute;
         left:5mm;
-        top:1;
+        top:1mm;
         
   }
   .NFLLogos {
@@ -38,6 +38,6 @@
     height: 125px;
     position: absolute;
     left:5mm;
-    top:1;
+    top:1mm;
     
 }
