--- a/my-app/src/pages/Pages.css
+++ b/my-app/src/pages/Pages.css
@@ -37,3 +37,22 @@
   flex-wrap: wrap;
   justify-content: center;
 }
+
+.comments-section {
+  background: gray;
+  border-radius: 2px;
+  margin-bottom: 1rem;
+}
+.post {
+  border: 1px solid black;
+  border-radius: 2px;
+}
+
+.submit-button {
+  float: right;
+  padding: 2px;
+  margin-top: -10px;
+}
+.post p {
+  padding-left: 10px;
+}
