--- a/my-app/src/pages/Pages.css
+++ b/my-app/src/pages/Pages.css
@@ -53,6 +53,14 @@
   padding: 2px;
   margin-top: -10px;
 }
+
+.like-button {
+  float: right;
+  padding: 4px;
+  margin-top: -50px;
+  margin-right: 5px;
+}
+
 .post p {
   padding-left: 10px;
 }
