Phase 3: Created search page that pulls all team data from the different leagues. Added search link to navbar. Added Search page routing to App.js

--- a/my-app/src/pages/Pages.css
+++ b/my-app/src/pages/Pages.css
@@ -9,6 +9,16 @@
     font-size: calc(10px + 2vmin);
     color: white;
 }
+.Pages-Search {
+  background-color: #282c34;
+  min-height: 100vh;
+  overflow: hidden;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  font-size: calc(10px + 2vmin);
+  color: white;
+}
 .Pages-Nfl {
     background-color: #282c34;
     min-height: 100vh;
