Phase 3: Update betting page to show links and beautified frontend

--- a/my-app/src/pages/Pages.css
+++ b/my-app/src/pages/Pages.css
@@ -25,6 +25,11 @@
 .chartClicker {
   margin-top: 10px;
 }
+.links {
+  display: flex; 
+  justify-content: space-between;
+  width: 43%;
+}
 
 .App-logo {
   width: 100%;
