--- a/my-app/src/pages/Pages.css
+++ b/my-app/src/pages/Pages.css
@@ -26,7 +26,7 @@
   margin-top: 10px;
 }
 .links {
-  display: flex; 
+  display: flex;
   justify-content: space-between;
   width: 43%;
 }
@@ -44,13 +44,14 @@
 }
 
 .comments-section {
-  background: gray;
   border-radius: 4px;
   margin-bottom: 1rem;
 }
 .post {
   border: 1px solid black;
   border-radius: 4px;
+  width: 100%;
+  background: dimgray;
 }
 
 .submit-button {
@@ -63,9 +64,23 @@
   padding-left: 10px;
 }
 
+textarea.form-control {
+    background: lightgrey;
+}
+
 .post-content {
   text-align: center;
   padding: 10px;
+}
+
+.blog-page {
+  margin-top: 75px;
+  padding-bottom: 25px;
+}
+
+.post-teams {
+  font-size: 12px;
+  margin-top: 5px;
 }
 
 .post-date {
