--- a/my-app/src/components/GameBar.css
+++ b/my-app/src/components/GameBar.css
@@ -26,6 +26,12 @@
     padding: 5px;
 }
 
+@media (max-width: 700px) {
+  .gb-btn div, .gb-btn h3 {
+    font-size: 20px;
+  }
+}
+
 @media (max-width: 500px) {
   .gb-btn {
     width: 98vw;
